force-app/main/default/objects/junobj__c/junobj__c.object-meta.xml
<CustomObject>
    <label>junobj</label>
    <nameField>
        <label>junobj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>junobj</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>