force-app/main/default/objects/junobj__c/fields/junno__c.field-meta.xml
<CustomField>
    <fullName>junno__c</fullName>
    <label>junno</label>
    <length>10</length>
    <type>Text</type>
</CustomField>