force-app/main/default/objects/junobj__c/fields/master1__c.field-meta.xml
<CustomField>
    <fullName>master1__c</fullName>
    <label>master1</label>
    <referenceTo>master1__c</referenceTo>
    <relationshipLabel>junobj</relationshipLabel>
    <relationshipName>junobj</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>