force-app/main/default/objects/junobj__c/fields/master2__c.field-meta.xml
<CustomField>
    <fullName>master2__c</fullName>
    <label>master2</label>
    <referenceTo>master2__c</referenceTo>
    <relationshipLabel>junobj</relationshipLabel>
    <relationshipName>junobj</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>